[GH-210] feat(CharacterBuildings): implement CharacterBuildingRemover for deleting character buildings and add associated tests
